--- a/resources/style.css
+++ b/resources/style.css
@@ -14,5 +14,28 @@ body {
 }
 .title nav {
   font-size: 18px;
-  color:  white;  
+  color:  white;
+}
+.process h2 {
+  font-size: 32px;
+  font-weight: bold;
+}
+h3 {
+  font-size: 23px;
+  font-weight: bold;
+}
+p {
+  font-size: 14px;
+}
+footer {
+  font-size: 11px
+  color: white;
+  background-color: dimgray;
+  text-align: left;
+}
+.work h2 {
+  font-size: 23px;
+  font-weight: bold;
+  color: white;
+  background-image: url(the-flatiron-building.png);
 }
